cabal-version:       3.0
name:                om-http-logging
version:             0.1.1.0
synopsis:            om-http-logging
description:         WAI logging utilities.
homepage:            https://github.com/owensmurray/om-http-logging
license:             MIT
license-file:        LICENSE
author:              Rick Owens
maintainer:          rick@owensmurray.com
copyright:           2020 Owens Murray, LLC.
category:            Web
build-type:          Simple
extra-source-files:  README.md

common dependencies
  build-depends:
    , base            >= 4.15.1.0 && < 4.16
    , http-types      >= 0.12.3   && < 0.13
    , monad-logger    >= 0.3.36   && < 0.4
    , safe-exceptions >= 0.1.7.3  && < 0.2
    , text            >= 1.2.5.0  && < 1.3
    , time            >= 1.9.3    && < 1.10
    , uuid            >= 1.3.15   && < 1.4
    , wai             >= 3.2.3    && < 3.3

common warnings
  ghc-options:
    -Wmissing-deriving-strategies
    -Wmissing-export-lists
    -Wmissing-import-lists
    -Wredundant-constraints
    -Wall

library
  import: warnings, dependencies
  exposed-modules:     
    OM.HTTP.Logging
  -- other-modules:       
  -- other-extensions:    
  hs-source-dirs:      src
  default-language:    Haskell2010

